fix scrollbar arrow color in dark style

--- a/src/main/resources/style-dark.css
+++ b/src/main/resources/style-dark.css
@@ -19,7 +19,7 @@
 
 .scroll-bar > .increment-button > .increment-arrow,
 .scroll-bar > .decrement-button > .decrement-arrow {
-    -fx-background-color: -fx-text-fill;
+    -fx-background-color: #ffffff;
 }
 
 .text-field {
